# Ingenieria-Informatica

./: Linux - Acceso directo.lnk  README.md
AyED/: a.out  el_rulas.hpp  invertir-punteros.cc  struct-del-copilot.cpp  struct.cc
AyED WINDOWS/Estudiar-examen/: examen_05.cc  prueba1.cc
AyED WINDOWS/Estudiar-examen/Listas doblemente enlazadas/: dll_t.h  main_dll.cc
AyED WINDOWS/Estudiar-examen/Listas enlazadas/: main_sll.cc  sll_t.h
AyED WINDOWS/Practica1/: main_rational_t.cpp  rational_t.cpp  rational_t.hpp
AyED WINDOWS/Practica2/: main_p2.cpp  matrix_t.hpp  rational_t_pr2.cpp  rational_t_pr2.hpp  vector_t.hpp
AyED WINDOWS/Practica3/: polynomial.h  sparse_vector_t.h
AyED WINDOWS/Practica4/: README.md  main_sllpolynomial.cc  pair_t.h  sllpolynomial.h  vector_t.h
AyED/Practica-1/: main_rational_t  main_rational_t.cpp  rational_t.cpp  rational_t.hpp
AyED/Practica-2/: main_p2  main_p2.cpp  matrix_t.hpp  rational_t_pr2.cpp  vector_t.hpp
AyED/Practica-3/: main_polynomial  main_polynomial.cc  pair_t.h  polynomial.h  sparse_vector_t.h  vector_t.h
AyED/Practica-4/: main_sllpolynomial  main_sllpolynomial.cc  sllpolynomial.h
AyED/Practica-5/: data_rpn_t_1.txt  main_rpn_t  main_rpn_t.cc  rpn_t.h
AyED/Practicar matrices/: a.out  sumar_diagonal_principal.cc
AyudarAnton/: Clase-fraccion-python.py  clase-vector-python.py  num.py  testing.py
EXPRESION GRAFICA WINDOWS/: untitled.blend  untitled.blend1
EXPRESION GRAFICA WINDOWS/Practica 1 (Hacer el taburete)/: Plantilla Memoria PL1_Introduccion al modelado 2023 (1).docx
IB/practicas/IB-p03-VI/: Quijote.txt
IB/practicas/IB-p05-GitHub/: P48107_division_de_enteros.cc  arithmetic_operators.cc  boolean_operators.cc  convertidor.cc  desinflado.cc  suma_tres_enteros.cc
IB/practicas/IB-p06-Makefile/: Makefile  P34279_add-one-second.cc  P59539_harmonic-numbers.cc  P90615_maximun-of-three-integers.cc  P97156_numbers-in-an-interval.cc  P98960_Uppercase-and-lowercase-letters.cc  aaaa.cc
IB/practicas/IB-p08-functions/: a.out
IB/practicas/IB-p10-string-array-vector/ejercicios_practica/GenerateVector/: CMakeLists.txt
IB/practicas/IB-p10-string-array-vector/ejercicios_practica/GenerateVector/src/: generate_main.cc  generate_vector.cc  generate_vector.h  tools.cc  tools.h
IB/practicas/IB-p11-VSC/p11-files/Practica-miercoles/P11_operaciones-matematicas/: CMakeLists.txt
IB/practicas/IB-p11-VSC/p11-files/Practica-miercoles/P11_operaciones-matematicas/src/: Operaciones.cc  Operaciones.h  Operaciones_main.cc  Prueba.txt  tools.cc  tools.h
IB/practicas/IB-p11-VSC/p11-files/ejercicios_practica/rotate/: CMakeLists.txt
IB/practicas/IB-p11-VSC/p11-files/ejercicios_practica/rotate/src/: rotate.cc  rotate.h  rotate_main.cc  tools.cc  tools.h
IB/practicas/IB-p11-VSC/p11-files/ejercicios_practica/vovels-and-consonats/: CMakeLists.txt
IB/practicas/IB-p11-VSC/p11-files/ejercicios_practica/vovels-and-consonats/src/: tools.cc  tools.h  vowels-consonats.cc  vowels-consonats.h  vowels-consonats_main.cc
IB/practicas/IB-p12-OOP/P12-OOP/Practica-miercoles/: CMakeLists.txt
IB/practicas/IB-p12-OOP/P12-OOP/Practica-miercoles/src/: P12-cilindro.cc  P12-cilindro.h  P12-cilindro_main.cc  tools.cc  tools.h
IB/practicas/IB-p12-OOP/P12-OOP/ejercicios_practica/Complejos/: CMakeLists.txt
IB/practicas/IB-p12-OOP/P12-OOP/ejercicios_practica/Complejos/src/: complejo.cc  complejo.h  complejo_main.cc  tools.cc  tools.h
IB/practicas/IB-p12-OOP/P12-OOP/ejercicios_practica/Point2D/: CMakeLists.txt
IB/practicas/IB-p12-OOP/P12-OOP/ejercicios_practica/Point2D/src/: point2D.cc  point2D.h  point2D_main.cc
IB/practicas/IB-p13-OOP-2/P13-OOP/Practicas_miercoles/: CMakeLists.txt
IB/practicas/IB-p13-OOP-2/P13-OOP/Practicas_miercoles/src/: P13_rectangulo.cc  P13_rectangulo.h  P13_rectangulo_main.cc
IB/practicas/IB-p13-OOP-2/P13-OOP/ejercicios_practicas/Racional/: CMakeLists.txt
IB/practicas/IB-p13-OOP-2/P13-OOP/ejercicios_practicas/Racional/src/: racional.cc  racional.h  racional_main.cc
IB/problemas/Practicar-para-examen/Examen-21_22/Guay_NoGuay/: CMakeLists.txt
IB/problemas/Practicar-para-examen/Examen-21_22/Guay_NoGuay/src/: Guay.cc  Guay.h  Guay_main.cc
IB/problemas/Practicar-para-examen/Hoja_de_problemas3/Transformacion_S11/: CMakeLists.txt
IB/problemas/Practicar-para-examen/Hoja_de_problemas3/Transformacion_S11/src/: transformado.cc  transformado.h  transformado_main.cc
IB/problemas/Problemas_24_de_octubre/: a.out  ejercicio10_divisores.cc  ejercicio11_Fibonacci.cc  ejercicio8_reloj.cc  ejercicio9_potencias.cc
IB/problemas/jutge/: P75149_looking-for-a.cc  P89078_primera-posicion.cc  a.out
IB/pruebitas/: a.out  basuara.cc  intercambio.cc  prueba.cc  prueba_vectores.cc  sum.cc
INFORMATICA BASICA WINDOWS/: AyED.odt  Introduccion a C++.odt  Linux.odt  opa.cc
INFORMATICA BASICA WINDOWS/Practicar examen/: Collatz.cc  opa.cc
OPTI/Grafo/: grafo.cpp  grafo.h  main.cpp
OPTIMIZACION WINDOWS/: CMakeLists.txt  cadena de mi amorcito guille.txt  grafo3.gr
OPTIMIZACION WINDOWS/src/: grafo.cpp  grafo.h  main.cpp
PC/PR1_pseudocodigo/: PR1.cc  a.out  prueba.cc
PRINCIPIOS DE COMPUTADORES WINDOWS/: guille.s  suma_media.s
PRINCIPIOS DE COMPUTADORES WINDOWS/Ayudar Barbuzano/: ev1j_skel.s
PRINCIPIOS DE COMPUTADORES WINDOWS/PR3/: manejaMatricesFunciones2324_skel  funciones.s  manejaMatricesFunciones2324_skel (1).s  manejaMatricesFunciones2324_skel convenio.s  manejaMatricesFunciones2324_skel copy.s  manejaMatricesFunciones2324_skel.s  matrix_fase4[1].s  trabajar-matrices.s
PRINCIPIOS DE COMPUTADORES WINDOWS/Practica 1/: practica1.s
PRINCIPIOS DE COMPUTADORES WINDOWS/Practica 1 entregable/: PR1.s  practica.s  practica1.s
PRINCIPIOS DE COMPUTADORES WINDOWS/Practicar microexamen/: ME1_ejemplo _skel_guille.s  ME1_ejemplo.cc  ME1_ejemplo.s  ME1_ejemplo_skel.s  array04.cpp  array04.s
PRINCIPIOS DE COMPUTADORES WINDOWS/Programas_Funciones/: funcion1_suma.s
PRINCIPIOS DE COMPUTADORES WINDOWS/Tutoria Academica 5/: leer_vector_inverso.s
PRINCIPIOS DE COMPUTADORES WINDOWS/Tutoria_academica_3/: div_flotantes.s  radio.s
(+174 files in other folders)
